Fix IntersectionObserver bug on mobile Chrome causing lazy loaded images to not show

--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -7,7 +7,7 @@
   /* Let navbar overlay */
   color: antiquewhite;
   position: relative;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 /* Animated Background Blobs */
